<resources>

    <string name="app_name">Business-Inform</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Бизнес Информ</string>
    <string name="TextHello">Пожалуйста, выберите интересующий вас каталог:</string>
    <string name="ButtonExp">Бизнес Экспорт</string>
    <string name="ButtonStr">Бизнес Строительство</string>
    <string name="ButtonProd">Бизнес Продовольствие</string>
    <string name="dialog_title">Внимание!</string>
    <string name="dialog_content">Вы впервые запускаете каталог!
         Сейчас будет произведена загрузка информации из интернета!</string>
    <string name="details_name">Название:</string>
    <string name="details_address">Адрес:</string>
    <string name="details_phone">Телефон:</string>
    <string name="details_email">e-mail:</string>
    <string name="details_site">web-сайт:</string>
    <string name="text_search">Введите название компании:</string>
    <string name="search_button">Поиск</string>

</resources>