<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffb346" >

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher"
        android:visibility="invisible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:padding="5dp"
        android:layout_below="@id/imageViewLogo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/row_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/textName"
                        android:layout_weight="0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/details_name" />

                    <TextView
                        android:id="@+id/textViewName"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:text="@string/app_name"
                        android:textStyle="bold"
                        android:ellipsize="marquee" />

                </TableRow>

                <TableRow
                    android:id="@+id/row_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                    android:paddingTop="10dp" >

                    <TextView
                        android:id="@+id/textAddress"
                        android:layout_weight="0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/details_address" />

                    <TextView
                        android:id="@+id/textViewAddress"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:text="@string/app_name" />
                </TableRow>

                <TableRow
                    android:id="@+id/row_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                    android:paddingTop="10dp" >

                    <TextView
                        android:id="@+id/textPhone"
                        android:layout_weight="0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/details_phone" />

                    <TextView
                        android:id="@+id/textViewPhone"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:text="@string/app_name" />
                </TableRow>

                <TableRow
                    android:id="@+id/row_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                    android:paddingTop="10dp"
                    android:visibility="gone" >

                    <TextView
                        android:id="@+id/textEmail"
                        android:layout_weight="0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/details_email" />

                    <TextView
                        android:id="@+id/textViewEmail"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:text="@string/app_name" />
                </TableRow>

                <TableRow
                    android:id="@+id/row_site"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                    android:paddingTop="10dp"
                    android:visibility="gone" >

                    <TextView
                        android:id="@+id/textSite"
                        android:layout_weight="0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/details_site" />

                    <TextView
                        android:id="@+id/textViewSite"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:text="@string/app_name" />
                </TableRow>
            </TableLayout>

            <by.binfo.BusinessInform.ResizableImageView
                android:id="@+id/imageViewModule"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:scaleType="fitStart"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingLeft="5dp"
                android:text="@string/app_name" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>